src/test/ui/issues/issue-17263.nll.stderr
error: compilation successful
  --> $DIR/issue-17263.rs:15:1
   |
LL | / fn main() {
LL | |     let mut x: Box<_> = box Foo { a: 1, b: 2 };
LL | |     let (a, b) = (&mut x.a, &mut x.b);
LL | |
...  |
LL | |     use_mut(a);
LL | | }
   | |_^

error: aborting due to previous error

